volexc/tests/ui/parse_service_missing_index.out
Error: found ';' expected '='
   ╭─[ parse_service_missing_index.vol:7:32 ]
   │
 7 │     fn bar(Request) -> Response;
   │                                ┬  
   │                                ╰── Unexpected ';'
   │ 
   │ Note: Expected one of: '='
───╯